--- a/.gitconfig
+++ b/.gitconfig
@@ -12,6 +12,7 @@
     lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
     cia = commit --amend
     review = log HEAD --not @{u} --reverse -p
+    rebaseroot = rebase -i --root
 
 [core]
     editor = vim
