Add delay to fix bug in setting wallpaper at startup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -64,7 +64,7 @@ $lock = hyprlock
 exec-once = ~/.config/hypr/external-monitor-on-off.sh # disable external monitor
 exec-once = [workspace 1 silent] ~/.config/hypr/workspace-start.sh
 exec-once = [workspace 2 ] firefox
-exec-once = ~/.config/hypr/wallpaper-random.sh
+exec-once = sleep 1 && ~/.config/hypr/wallpaper-random.sh
 
 #############################
 ### ENVIRONMENT VARIABLES ###
