--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,7 +49,7 @@ workspace=0,monitor:$externalMonitor
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = wofi --show drun
 $lock = hyprlock
 
@@ -62,8 +62,8 @@ $lock = hyprlock
 # Or execute your favorite apps at launch like this:
 
 exec-once = ~/.config/hypr/external-monitor-on-off.sh # disable external monitor
-exec-once = [workspace 1 silent] ~/.config/hypr/workspace-start.sh
-exec-once = [workspace 2 ] firefox
+exec-once = [workspace 1 ] ~/.config/hypr/workspace-start.sh
+exec-once = [workspace 2 silent ] firefox
 exec-once = sleep 1 && ~/.config/hypr/wallpaper-random.sh
 
 #############################
@@ -109,7 +109,8 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.9
+    #inactive_opacity = 0.9
+    inactive_opacity = 1.0
 
     shadow {
         enabled = true
@@ -205,7 +206,7 @@ input {
     kb_variant =
     kb_model =
     # disable capslock
-    #kb_options = shift:both_capslock, caps:ctrl_modifier
+    kb_options = caps:super
     kb_rules =
 
     # Change whether mouse cursor can re-focus windows
@@ -216,6 +217,8 @@ input {
     touchpad {
         natural_scroll = false
     }
+
+    numlock_by_default = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
@@ -366,32 +369,32 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 
 xwayland {
   force_zero_scaling = true
-  use_nearest_neighbor = false
 }
 
 # Prevent hypridle lock on any fullscreen window
 windowrulev2 = idleinhibit fullscreen, class:.*
 
-# Steam - center floating launched games
+# VLC: floating PIP
+windowrulev2 = size 512 384, class:^vlc$
+windowrulev2 = pin, class:^vlc$
+windowrulev2 = move 1000 450, class:^vlc$
+windowrulev2 = opacity 1 override 1 override, class:^vlc$
+windowrulev2 = float, class:^vlc$
+
+# Firefox: floating PIP (https://github.com/hyprwm/Hyprland/issues/2942)
+windowrulev2 = size 512 288, title:(Picture-in-Picture)
+windowrulev2 = pin, title:^(Picture-in-Picture)$
+windowrulev2 = move 1000 550, title:(Picture-in-Picture)
+windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = opacity 1 override 1 override, title:^(Picture-in-Picture)$
+
+# Steam: center floating launched games
 windowrulev2 = tile,class:^steam_app_[0-9]+$
 
-# VisualPinball - Player on external, DMD on primary
+# VisualPinball: playfield on external, DMD on primary
 windowrulev2 = monitor 1,title:Visual Pinball Player
 windowrulev2 = monitor 0,title:FlexDMD
 windowrulev2 = monitor 0,title:PinMAME
 
-# VLC floating PIP
-windowrulev2 = size 512 384, class:^vlc$
-windowrulev2 = pin, class:^vlc$
-windowrulev2 = move 1000 450, class:^vlc$
-windowrulev2 = float, class:^vlc$
-
-# Firefox floating PIP: https://github.com/hyprwm/Hyprland/issues/2942
-windowrulev2 = size 512 384, title:(Picture-in-Picture)
-windowrulev2 = pin, title:^(Picture-in-Picture)$
-windowrulev2 = move 1000 450, title:(Picture-in-Picture)
-windowrulev2 = float, title:^(Picture-in-Picture)$
-
-# Resize floating with mouse
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+# Pinball FX3: game on external
+windowrulev2 = monitor 1, title:Pinball FX3
