--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -120,7 +120,7 @@
     },
     "clock": {
 		"interval": 10,
-        "format": "{:%A, %B %d, %Y  %T}",
+        "format": "{:%a %F %T}",
         "tooltip-format": "<tt><small>{calendar}</small></tt>",
         "calendar": {
 			"mode"          : "year",
