Add trackpad toggle script and bind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -263,6 +263,7 @@ bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod, F2, exec, ~/.config/hypr/wallpaper-random.sh
 bind = $mainMod, F5, exec, ~/.config/hypr/external-monitor-on-off.sh
 bind = $mainMod, F6, exec, ~/.config/hypr/external-monitor-rotate.sh
+bind = $mainMod, F9, exec, ~/.config/hypr/trackpad-toggle.sh
 
 
 # Unused
