--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -164,10 +164,10 @@ animations {
 # uncomment all if you wish to use that.
 # workspace = w[tv1], gapsout:0, gapsin:0
 # workspace = f[1], gapsout:0, gapsin:0
-# windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
+# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+# windowrule = bordersize 0, floating:0, onworkspace:f[1]
+# windowrule = rounding 0, floating:0, onworkspace:f[1]
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -250,26 +250,27 @@ bind = $mainMod, P, exec, $lock
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, $menu
+bind = $mainMod, M, exit,
 
 # Window controls
 bind = $mainMod, F, fullscreen
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, N, togglesplit, # dwindle
-bind = $mainMod, Z, exec, ~/.config/hypr/layout-swap.sh
+bind = $mainMod, B, togglesplit, # dwindle
+bind = $mainMod, N, exec, ~/.config/hypr/layout-swap.sh
 bind = $mainMod SHIFT, Q, exec, ~/.config/hypr/customkill.sh
 
 # Extra scripts
-bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
-bind = $mainMod, F2, exec, ~/.config/hypr/wallpaper-random.sh
-bind = $mainMod, F5, exec, ~/.config/hypr/external-monitor-on-off.sh
-bind = $mainMod, F6, exec, ~/.config/hypr/external-monitor-rotate.sh
+bind = $mainMod, F1, exec, ~/.config/hypr/external-monitor-on-off.sh
+bind = $mainMod, F2, exec, ~/.config/hypr/external-monitor-rotate.sh
+bind = $mainMod, F3, exec, hyprctl hyprsunset temperature 3500
+bind = $mainMod, F4, exec, hyprctl hyprsunset identity
+bind = $mainMod, F5, exec, ~/.config/hypr/wallpaper-random.sh
+bind = $mainMod, F6, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod, F9, exec, ~/.config/hypr/trackpad-toggle.sh
-
 
 # Unused
 #bind = $mainMod SHIFT, Q, killactive,
 #bind = $mainMod, B, pseudo, # dwindle
-bind = $mainMod, M, exit,
 
 # Move focus
 bind = $mainMod, H, movefocus, l
@@ -360,42 +361,42 @@ bindl = $mainMod, R, exec, playerctl play-pause
 # windowrule = float, ^(kitty)$
 
 # Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
+windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 xwayland {
   force_zero_scaling = true
 }
 
 # Prevent hypridle lock on any fullscreen window
-windowrulev2 = idleinhibit fullscreen, class:.*
+windowrule = idleinhibit fullscreen, class:.*
 
 # VLC: floating PIP
-windowrulev2 = size 512 384, class:^vlc$
-windowrulev2 = pin, class:^vlc$
-windowrulev2 = move 1000 450, class:^vlc$
-windowrulev2 = opacity 1 override 1 override, class:^vlc$
-windowrulev2 = float, class:^vlc$
+windowrule = size 512 384, class:^vlc$
+windowrule = pin, class:^vlc$
+windowrule = move 1000 450, class:^vlc$
+windowrule = opacity 1 override 1 override, class:^vlc$
+windowrule = float, class:^vlc$
 
 # Firefox: floating PIP (https://github.com/hyprwm/Hyprland/issues/2942)
-windowrulev2 = size 512 288, title:(Picture-in-Picture)
-windowrulev2 = pin, title:^(Picture-in-Picture)$
-windowrulev2 = move 1000 550, title:(Picture-in-Picture)
-windowrulev2 = float, title:^(Picture-in-Picture)$
-windowrulev2 = opacity 1 override 1 override, title:^(Picture-in-Picture)$
+windowrule = size 512 288, title:(Picture-in-Picture)
+windowrule = pin, title:^(Picture-in-Picture)$
+windowrule = move 1000 550, title:(Picture-in-Picture)
+windowrule = float, title:^(Picture-in-Picture)$
+windowrule = opacity 1 override 1 override, title:^(Picture-in-Picture)$
 
 # Steam: center floating launched games
-windowrulev2 = tile,class:^steam_app_[0-9]+$
+windowrule = tile,class:^steam_app_[0-9]+$
 
 # VisualPinball: playfield on external, DMD on primary
-windowrulev2 = monitor 1,title:Visual Pinball Player
-windowrulev2 = monitor 0,title:FlexDMD
-windowrulev2 = monitor 0,title:PinMAME
+windowrule = monitor 1,title:Visual Pinball Player
+windowrule = monitor 0,title:FlexDMD
+windowrule = monitor 0,title:PinMAME
 
 # Pinball FX3: game on external
-windowrulev2 = monitor 1, title:Pinball FX3
+windowrule = monitor 1, title:Pinball FX3
