Update vpin ini for performance and proper res

--- a/.vpinball/VPinballX.ini
+++ b/.vpinball/VPinballX.ini
@@ -38,11 +38,11 @@ B2SHideB2SBackglass =
 B2SHideDMD =
 B2SDualMode =
 B2SWindows =
-B2SBackglassX =
-B2SBackglassY =
-B2SBackglassWidth =
-B2SBackglassHeight =
-B2SBackglassRotation =
+B2SBackglassX = 20
+B2SBackglassY = 20
+B2SBackglassWidth = 1000
+B2SBackglassHeight = 1000
+B2SBackglassRotation = 0
 B2SDMDX =
 B2SDMDY =
 B2SDMDWidth =
@@ -241,7 +241,7 @@ FullScreen = 1
 WindowPosX =
 WindowPosY =
 Width = 1920
-Height = 1200
+Height = 1080
 Render10Bit =
 ColorDepth =
 ; Defines the view mode used when running a table
@@ -255,21 +255,21 @@ RefreshRate =
 ; 1 - Vertical Sync: Synchronize on video sync which avoids video tearing, but has higher input latency.
 ; 2 - Adaptive Sync: Synchronize on video sync, except for late frames (below target FPS), also has higher input latency.
 ; 3 - Frame Pacing (default): Targets real time simulation with low input- and video-latency (also dynamically adjusts framerate).
-SyncMode = 2
+SyncMode = 3
 MaxFramerate = 60
 MaxPrerenderedFrames =
 ; FXAA, 0 = disabled, 1 - 3 = FXAA fast-quality; 4-6 = NFAA,DLAA,SMAA (fast-quality)
-FXAA = 0
+FXAA = 1
 Sharpen = 0
 ScaleFXDMD =
 ; 0 = enabled, 1 = disabled
-DisableAO = 1
+DisableAO = 0
 ; 0 = static, 1 = dynamic
-DynamicAO = 0
+DynamicAO = 1
 ; screen space reflections: 0 = disabled, 1 = enabled
 SSRefl = 0
 ; playfield reflections: 0 = disabled, 1 = balls only, 2 = static only, 3 = static + balls, 4 = static + unsyned dynamics, 5 = dynamic
-PFReflection = 0
+PFReflection = 1
 MaxTexDimension =
 ; Anti aliasing supersampling, 0.00 - 2.00
 AAFactor =
@@ -657,14 +657,14 @@ SoundDir =
 MaterialDir =
 POVDir =
 PhysicsDir =
-TableFileName0 = /home/james/Games/VisualPinball/tables/Warlok (Williams 1982) VPW 1.2.vpx
-TableFileName1 = /home/james/Games/VisualPinball/tables/TOTAN4k 1.5.vpx
-TableFileName2 = /home/james/Games/VisualPinball/tables/The Addams Family (Bally 1992) 2.4.41.vpx
-TableFileName3 = /home/james/Games/VisualPinball/tables/Skateball (Bally 1980) VPW 1.0.vpx
-TableFileName4 = /home/james/Games/VisualPinball/tables/Medieval Madness (Williams 1997)_Bigus(MOD)2.0.vpx
-TableFileName5 = /home/james/Games/VisualPinball/tables/Jokerz! (Williams 1988) VPW V1.3.1.vpx
-TableFileName6 = /home/james/Games/VisualPinball/tables/Indiana Jones The Pinball Adventure (Williams 1993) VPWmod v1.1.vpx
-TableFileName7 = /home/james/Games/VisualPinball/tables/Dragonfist (Stern 1981) v2.0.2.vpx
+TableFileName0 = /home/james/Games/VisualPinball/tables/Total Nuclear Annihilation (Spooky 2017) VPW v2.3.vpx
+TableFileName1 = /home/james/Games/VisualPinball/tables/Bad Cats (Williams 1989) VPW 3.1.vpx
+TableFileName2 = /home/james/Games/VisualPinball/tables/Eight Ball (Bally 1977) v55_VPX8.vpx
+TableFileName3 = /home/james/Games/VisualPinball/tables/Melody (Gottlieb 1967).vpx
+TableFileName4 = /home/james/Games/VisualPinball/tables/Operation Thunder (Gottlieb 1992).vpx
+TableFileName5 = /home/james/Games/VisualPinball/tables/Skateball (Bally 1980) VPW 1.0.vpx
+TableFileName6 = /home/james/Games/VisualPinball/tables/Godzilla (Sega 1998) VPW 1.3.vpx
+TableFileName7 = /home/james/Games/VisualPinball/tables/Warlok (Williams 1982) VPW 1.2.vpx
 
 
 ; #######################################################
@@ -1092,10 +1092,9 @@ Terminator 2 - Judgment Day (Williams 1991) = 2.0
 Earthshaker (Williams 1989) = 1.1
 F14 Tomcat (Williams (1987) = 1.0
 Godzilla (Sega 1998) = 1.3
-Monster Bash VPW Mod = 1.0
-Dragonfist (Stern 1981) = 2.0
-Indiana Jones - The Pinball Adventure = 1.0
-Jokerz! (Williams 1988) = 1.3
 Skateball = 1.0
-The Addams Family = 2.3.1
-Tales of the Arabian Nights = 1.0
+Bad Cats (Williams 1989) = 3.1
+Operation Thunder (Gottlieb 1992) = VPX version 1.0
+Melody = 1.0
+Eight Ball (Bally 1977) = 5.5.0
+TNA = 2.3
