Update MangoHud blacklist

--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -328,7 +328,7 @@ round_corners=10
 # pci_dev=0000:03:00.0
 
 ### Blacklist
-blacklist=pavucontrol,lact
+blacklist=pavucontrol,lact,mpv
 
 ### Control over socket
 ### Enable and set socket name, '%p' is replaced with process id
