Tidy up hyprland configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,7 +49,6 @@ workspace=0,monitor:$externalMonitor
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = thunar
 $menu = wofi --show drun
 $lock = hyprlock
 
@@ -248,7 +247,6 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Launchers
 bind = $mainMod, P, exec, $lock
 bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, M, exit,
 
@@ -394,9 +392,9 @@ windowrule = opacity 1 override 1 override, title:^(Picture-in-Picture)$
 windowrule = tile,class:^steam_app_[0-9]+$
 
 # VisualPinball: playfield on external, DMD on primary
-windowrule = monitor 1,title:Visual Pinball Player
-windowrule = monitor 0,title:FlexDMD
-windowrule = monitor 0,title:PinMAME
+windowrule = monitor $externalMonitor,title:Visual Pinball Player
+windowrule = monitor $primaryMonitor,title:FlexDMD
+windowrule = monitor $primaryMonitor,title:PinMAME
 
 # Pinball FX3: game on external
-windowrule = monitor 1, title:Pinball FX3
+windowrule = monitor $externalMonitor, title:Pinball FX3
