--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -10,7 +10,7 @@
 ################ PERFORMANCE #################
 
 ### Limit the application FPS. Comma-separated list of one or more FPS values (e.g. 0,30,60). 0 means unlimited (unless VSynced)
-# fps_limit=0
+fps_limit=60
 
 ### early = wait before present, late = wait after present
 # fps_limit_method=
@@ -77,7 +77,7 @@
 ### Display the current GPU information
 ## Note: gpu_mem_clock and gpu_mem_temp also need "vram" to be enabled
 gpu_stats
-# gpu_temp
+gpu_temp
 # gpu_junction_temp
 gpu_core_clock
 # gpu_mem_temp
