Fix workspace startup for iGPU and dGPU, and also start Steam at boot

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -61,9 +61,9 @@ $lock = hyprlock
 # Or execute your favorite apps at launch like this:
 
 exec-once = ~/.config/hypr/external-monitor-on-off.sh # disable external monitor
-exec-once = [workspace 1 ] ~/.config/hypr/workspace-start.sh
-exec-once = [workspace 2 silent ] firefox
-exec-once = sleep 1 && ~/.config/hypr/wallpaper-random.sh
+exec-once = [workspace 1] sleep 0.3 && ~/.config/hypr/workspace-start.sh
+exec-once = sleep 0.3 && ~/.config/hypr/wallpaper-random.sh
+exec-once = steam -silent
 
 #############################
 ### ENVIRONMENT VARIABLES ###
