Set psuedo window key bind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -255,6 +255,7 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, B, togglesplit, # dwindle
 bind = $mainMod, N, exec, ~/.config/hypr/layout-swap.sh
+bind = $mainMod, C, pseudo, # dwindle
 bind = $mainMod SHIFT, Q, exec, ~/.config/hypr/customkill.sh
 
 # Extra scripts
@@ -268,7 +269,6 @@ bind = $mainMod, F9, exec, ~/.config/hypr/trackpad-toggle.sh
 
 # Unused
 #bind = $mainMod SHIFT, Q, killactive,
-#bind = $mainMod, B, pseudo, # dwindle
 
 # Move focus
 bind = $mainMod, H, movefocus, l
