Add attempted fixes for external monitor lag

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -74,6 +74,11 @@ exec-once = steam -silent
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+# Attempted fixes for external monitor lag
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# Attempt to fix external monitor lag; this does seem to have improved it a little
+env = WLR_NO_HARDWARE_CURSORS,1
 
 #####################
 ### LOOK AND FEEL ###
@@ -234,6 +239,14 @@ device {
 
 cursor {
     no_warps = true
+    # Attempted fixes for external monitor lag
+    use_cpu_buffer = 0
+    no_hardware_cursors = 1
+}
+
+opengl {
+    # Attempted fix for external monitor lag
+    nvidia_anti_flicker = false
 }
 
 
