Loads of fixes for VPinball

--- a/.vpinball/VPinballX.ini
+++ b/.vpinball/VPinballX.ini
@@ -43,11 +43,11 @@ B2SBackglassY = 20
 B2SBackglassWidth = 1000
 B2SBackglassHeight = 1000
 B2SBackglassRotation = 0
-B2SDMDX =
-B2SDMDY =
-B2SDMDWidth =
-B2SDMDHeight =
-B2SDMDRotation =
+B2SDMDX = 20
+B2SDMDY = 20
+B2SDMDWidth = 1000
+B2SDMDHeight = 1000
+B2SDMDRotation = 0
 B2SDMDFlipY =
 B2SPlugins =
 PUPCapture =
@@ -55,38 +55,38 @@ PUPPlugin =
 PUPWindows =
 PUPTopperScreen =
 PUPTopperWindow =
-PUPTopperWindowX =
-PUPTopperWindowY =
-PUPTopperWindowWidth =
-PUPTopperWindowHeight =
-PUPTopperWindowRotation =
+PUPTopperWindowX = 20
+PUPTopperWindowY = 20
+PUPTopperWindowWidth = 1000
+PUPTopperWindowHeight = 1000
+PUPTopperWindowRotation = 0
 PUPBackglassScreen =
 PUPBackglassWindow =
-PUPBackglassWindowX =
-PUPBackglassWindowY =
-PUPBackglassWindowWidth =
-PUPBackglassWindowHeight =
-PUPBackglassWindowRotation =
+PUPBackglassWindowX = 20
+PUPBackglassWindowY = 20
+PUPBackglassWindowWidth = 1000
+PUPBackglassWindowHeight = 1000
+PUPBackglassWindowRotation = 0
 PUPDMDScreen =
 PUPDMDWindow =
-PUPDMDWindowX =
-PUPDMDWindowY =
-PUPDMDWindowWidth =
-PUPDMDWindowHeight =
+PUPDMDWindowX = 20
+PUPDMDWindowY = 20
+PUPDMDWindowWidth = 1000
+PUPDMDWindowHeight = 1000
 PUPDMDWindowRotation =
 PUPPlayfieldScreen =
 PUPPlayfieldWindow =
-PUPPlayfieldWindowX =
-PUPPlayfieldWindowY =
-PUPPlayfieldWindowWidth =
-PUPPlayfieldWindowHeight =
+PUPPlayfieldWindowX = 20
+PUPPlayfieldWindowY = 20
+PUPPlayfieldWindowWidth = 1000
+PUPPlayfieldWindowHeight = 1000
 PUPPlayfieldWindowRotation =
 PUPFullDMDScreen =
 PUPFullDMDWindow =
-PUPFullDMDWindowX =
-PUPFullDMDWindowY =
-PUPFullDMDWindowWidth =
-PUPFullDMDWindowHeight =
+PUPFullDMDWindowX = 20
+PUPFullDMDWindowY = 20
+PUPFullDMDWindowWidth = 1000
+PUPFullDMDWindowHeight = 1000
 PUPFullDMDWindowRotation =
 DOFPlugin =
 WindowRenderer =
@@ -129,23 +129,23 @@ LRAxis =
 LRAxisFlip =
 UDAxis =
 UDAxisFlip =
-PBWEnabled =
+PBWEnabled = 0
 PBWNormalMount =
 PBWDefaultLayout =
 PBWRotationCB =
 PBWRotationvalue =
-PBWAccelGainX =
-PBWAccelGainY =
+PBWAccelGainX = 20
+PBWAccelGainY = 20
 PBWAccelMaxX =
 PBWAccelMaxY =
 TiltSensCB =
-TiltSensValue =
+TiltSensValue = 1
 EnableNudgeFilter =
-EnableLegacyNudge =
-LegacyNudgeStrength =
+EnableLegacyNudge = 1
+LegacyNudgeStrength = 1.25
 
 ; Plunger
-PlungerAxis =
+PlungerAxis = 5
 ReversePlungerAxis =
 DeadZone = 0
 PlungerRetract =
@@ -255,8 +255,8 @@ RefreshRate =
 ; 1 - Vertical Sync: Synchronize on video sync which avoids video tearing, but has higher input latency.
 ; 2 - Adaptive Sync: Synchronize on video sync, except for late frames (below target FPS), also has higher input latency.
 ; 3 - Frame Pacing (default): Targets real time simulation with low input- and video-latency (also dynamically adjusts framerate).
-SyncMode = 3
-MaxFramerate = 60
+SyncMode = 2
+MaxFramerate = 180
 MaxPrerenderedFrames =
 ; FXAA, 0 = disabled, 1 - 3 = FXAA fast-quality; 4-6 = NFAA,DLAA,SMAA (fast-quality)
 FXAA = 1
@@ -270,7 +270,7 @@ DynamicAO = 1
 SSRefl = 0
 ; playfield reflections: 0 = disabled, 1 = balls only, 2 = static only, 3 = static + balls, 4 = static + unsyned dynamics, 5 = dynamic
 PFReflection = 1
-MaxTexDimension =
+MaxTexDimension = 3072
 ; Anti aliasing supersampling, 0.00 - 2.00
 AAFactor =
 ; MSAA samples, 0 = none, 4 = 4, 6 = 6, 8 = 8
