Various hyprland workspace adjustments

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ workspace=5,monitor:$primaryMonitor
 workspace=6,monitor:$primaryMonitor
 workspace=7,monitor:$primaryMonitor
 workspace=8,monitor:$primaryMonitor
-workspace=9,monitor:$externalMonitor
+workspace=9,monitor:$primaryMonitor
 workspace=0,monitor:$externalMonitor
 
 
@@ -60,9 +60,9 @@ $lock = hyprlock
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = ~/.config/hypr/external-monitor-on-off.sh # disable external monitor
-exec-once = [workspace 1] sleep 0.3 && ~/.config/hypr/workspace-start.sh
-exec-once = sleep 0.3 && ~/.config/hypr/wallpaper-random.sh
+exec-once = [workspace 1] sleep 0.8 && ~/.config/hypr/workspace-start.sh
+exec-once = sleep 0.8 && ~/.config/hypr/wallpaper-random.sh
+exec-once = sleep 0.8 && ~/.config/hypr/trackpad-toggle.sh
 exec-once = steam -silent
 
 #############################
@@ -89,7 +89,7 @@ env = WLR_NO_HARDWARE_CURSORS,1
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 4
-    gaps_out = 4, 4, 0, 4
+    gaps_out = 4, 0, 0, 0
 
     border_size = 1
 
@@ -214,7 +214,7 @@ input {
     kb_rules =
 
     # Change whether mouse cursor can re-focus windows
-    #follow_mouse = 0
+    follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -239,6 +239,7 @@ device {
 
 cursor {
     no_warps = true
+    inactive_timeout = 10
     # Attempted fixes for external monitor lag
     use_cpu_buffer = 0
     no_hardware_cursors = 1
@@ -264,7 +265,8 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod, M, exit,
 
 # Window controls
-bind = $mainMod, F, fullscreen
+#bind = $mainMod, F, fullscreen
+bind = $mainMod, F, fullscreenstate, 2 -1
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, B, togglesplit, # dwindle
 bind = $mainMod, N, exec, ~/.config/hypr/layout-swap.sh
@@ -387,12 +389,15 @@ xwayland {
 # Prevent hypridle lock on any fullscreen window
 windowrule = idleinhibit fullscreen, class:.*
 
-# VLC: floating PIP
-windowrule = size 512 384, class:^vlc$
-windowrule = pin, class:^vlc$
-windowrule = move 1000 450, class:^vlc$
-windowrule = opacity 1 override 1 override, class:^vlc$
-windowrule = float, class:^vlc$
+# Do not show an active border highlight when only one window in workspace
+windowrule = noborder, onworkspace:w[t1]
+
+# MPV: floating PIP
+windowrule = size 512 384, class:^mpv$
+windowrule = pin, class:^mpv$
+windowrule = move 1000 450, class:^mpv$
+windowrule = opacity 1 override 1 override, class:^mpv$
+windowrule = float, class:^mpv$
 
 # Firefox: floating PIP (https://github.com/hyprwm/Hyprland/issues/2942)
 windowrule = size 512 288, title:(Picture-in-Picture)
@@ -404,10 +409,14 @@ windowrule = opacity 1 override 1 override, title:^(Picture-in-Picture)$
 # Steam: center floating launched games
 windowrule = tile,class:^steam_app_[0-9]+$
 
+# Steam: Prevent hypridle lock on Steam games
+windowrule = idleinhibit fullscreen, class:^steam_app_[0-9]+$
+
 # VisualPinball: playfield on external, DMD on primary
 windowrule = monitor $externalMonitor,title:Visual Pinball Player
-windowrule = monitor $primaryMonitor,title:FlexDMD
 windowrule = monitor $primaryMonitor,title:PinMAME
+windowrule = dimaround,title:PinMAME
 
 # Pinball FX3: game on external
 windowrule = monitor $externalMonitor, title:Pinball FX3
+windowrule = fullscreen, title:Pinball FX3
