Use hyprland monitorv2 definitions and update on-off toggle script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,8 +25,21 @@ $primaryMonitor = eDP-1
 $externalMonitor = HDMI-A-1
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=$primaryMonitor,preferred,auto,1.25
-monitor=$externalMonitor,preferred,auto,1.25,,disabled
+monitorv2 {
+    output = $primaryMonitor
+    mode = preferred
+    position = 0x0
+    scale = 1.25
+}
+
+monitorv2 {
+    output = $externalMonitor
+    mode = 1920x1080@180
+    position = 1536x0
+    scale = 1.25
+    transform = 1
+    disabled = 1
+}
 
 # Force workspaces onto specific monitors
 workspace=1,monitor:$primaryMonitor
