Launch Steam apps fullscreen

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -419,8 +419,9 @@ windowrule = move 1010 565, title:(Picture-in-Picture)
 windowrule = float, title:^(Picture-in-Picture)$
 windowrule = opacity 1 override 1 override, title:^(Picture-in-Picture)$
 
-# Steam: center floating launched games
+# Steam: fullscreen launched games
 windowrule = tile,class:^steam_app_[0-9]+$
+windowrule = fullscreen,class:^steam_app_[0-9]+$
 
 # Steam: Prevent hypridle lock on Steam games
 windowrule = idleinhibit fullscreen, class:^steam_app_[0-9]+$
