--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -74,7 +74,8 @@ $lock = hyprlock
 # Or execute your favorite apps at launch like this:
 
 exec-once = [workspace 1] sleep 0.8 && ~/.config/hypr/workspace-start.sh
-exec-once = sleep 0.8 && ~/.config/hypr/wallpaper-random.sh
+exec-once = sleep 0.8 && ~/.config/hypr/wallpaper-random.sh $primaryMonitor 1920x1080
+exec-once = sleep 0.8 && ~/.config/hypr/wallpaper-random.sh $externalMonitor 1080x1920
 exec-once = sleep 0.8 && ~/.config/hypr/trackpad-toggle.sh
 exec-once = steam -silent
 
@@ -291,8 +292,9 @@ bind = $mainMod, F1, exec, ~/.config/hypr/external-monitor-on-off.sh
 bind = $mainMod, F2, exec, ~/.config/hypr/external-monitor-rotate.sh
 bind = $mainMod, F3, exec, hyprctl hyprsunset temperature 3500
 bind = $mainMod, F4, exec, hyprctl hyprsunset identity
-bind = $mainMod, F5, exec, ~/.config/hypr/wallpaper-random.sh
-bind = $mainMod, F6, exec, ~/.config/hypr/gamemode.sh
+bind = $mainMod, F5, exec, ~/.config/hypr/wallpaper-random.sh $primaryMonitor 1920x1080
+bind = $mainMod, F6, exec, ~/.config/hypr/wallpaper-random.sh $externalMonitor 1080x1920
+bind = $mainMod, F7, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod, F9, exec, ~/.config/hypr/trackpad-toggle.sh
 
 # Unused
