Tidy up hyprland helper scripts

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -285,8 +285,7 @@ bind = $mainMod SHIFT, Q, exec, ~/.config/hypr/customkill.sh
 # Extra scripts
 bind = $mainMod, F1, exec, ~/.config/hypr/external-monitor-on-off.sh
 bind = $mainMod, F2, exec, ~/.config/hypr/external-monitor-rotate.sh
-bind = $mainMod, F3, exec, hyprctl hyprsunset temperature 3500
-bind = $mainMod, F4, exec, hyprctl hyprsunset identity
+bind = $mainMod, F3, exec, ~/.config/hypr/hyprsunset-toggle.sh
 bind = $mainMod, F5, exec, ~/.config/hypr/wallpaper-random.sh $primaryMonitor 1920x1080
 bind = $mainMod, F6, exec, ~/.config/hypr/wallpaper-random.sh $externalMonitor 1080x1920
 bind = $mainMod, F7, exec, ~/.config/hypr/gamemode.sh
