Fix FlexDMD appearing on wrong monitor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -418,6 +418,7 @@ windowrule = idleinhibit fullscreen, class:^steam_app_[0-9]+$
 # VisualPinball: playfield on external, DMD on primary
 windowrule = monitor $externalMonitor,title:Visual Pinball Player
 windowrule = monitor $primaryMonitor,title:PinMAME
+windowrule = monitor $primaryMonitor,title:FlexDMD
 windowrule = dimaround,title:PinMAME
 
 # Pinball FX3: game on external
