Improve vpinball analogue nudging

--- a/.vpinball/VPinballX.ini
+++ b/.vpinball/VPinballX.ini
@@ -125,24 +125,26 @@ PlaySound =
 SoundVolume =
 
 ; Nudge
+; Axis flipped for direct input from analogue stick
+; Set AxisFlip to 0 if using weighted stick
 LRAxis =
-LRAxisFlip =
+LRAxisFlip = 1
 UDAxis =
-UDAxisFlip =
-PBWEnabled = 0
+UDAxisFlip = 1
+PBWEnabled = 1
 PBWNormalMount =
 PBWDefaultLayout =
 PBWRotationCB =
 PBWRotationvalue =
-PBWAccelGainX = 20
-PBWAccelGainY = 20
+PBWAccelGainX = 35
+PBWAccelGainY = 35
 PBWAccelMaxX =
 PBWAccelMaxY =
 TiltSensCB =
 TiltSensValue = 1
 EnableNudgeFilter =
-EnableLegacyNudge = 1
-LegacyNudgeStrength = 1.25
+EnableLegacyNudge = 0
+LegacyNudgeStrength = 5
 
 ; Plunger
 PlungerAxis = 5
