--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -159,6 +159,7 @@
     "temperature": {
         // "thermal-zone": 2,
         // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+        "warning-threshold": 60,
         "critical-threshold": 80,
         // "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
