Updated vpinball settings for real controller

--- a/.vpinball/VPinballX.ini
+++ b/.vpinball/VPinballX.ini
@@ -128,21 +128,26 @@ SoundVolume =
 ; Axis flipped for direct input from analogue stick
 ; Set AxisFlip to 0 if using weighted stick
 LRAxis =
-LRAxisFlip = 1
+LRAxisFlip = 0
 UDAxis =
-UDAxisFlip = 1
+UDAxisFlip = 0
 PBWEnabled = 1
 PBWNormalMount =
 PBWDefaultLayout =
 PBWRotationCB =
 PBWRotationvalue =
-PBWAccelGainX = 35
-PBWAccelGainY = 35
+PBWAccelGainX = 160
+PBWAccelGainY = 160
 PBWAccelMaxX =
 PBWAccelMaxY =
-TiltSensCB =
-TiltSensValue = 1
-EnableNudgeFilter =
+TiltSensCB = 1
+; This is the default setting but doesn't seem to be read
+TiltSensValue = 1000
+; Real setting for tilt sensitivity
+TiltSensitivity = 940
+; Setting for the simulated bob weight, higher is heavier
+TiltInertia = 30
+EnableNudgeFilter = 0
 EnableLegacyNudge = 0
 LegacyNudgeStrength = 5
 
@@ -659,14 +664,14 @@ SoundDir =
 MaterialDir =
 POVDir =
 PhysicsDir =
-TableFileName0 = /home/james/Games/VisualPinball/tables/Total Nuclear Annihilation (Spooky 2017) VPW v2.3.vpx
-TableFileName1 = /home/james/Games/VisualPinball/tables/Bad Cats (Williams 1989) VPW 3.1.vpx
-TableFileName2 = /home/james/Games/VisualPinball/tables/Eight Ball (Bally 1977) v55_VPX8.vpx
-TableFileName3 = /home/james/Games/VisualPinball/tables/Melody (Gottlieb 1967).vpx
-TableFileName4 = /home/james/Games/VisualPinball/tables/Operation Thunder (Gottlieb 1992).vpx
-TableFileName5 = /home/james/Games/VisualPinball/tables/Skateball (Bally 1980) VPW 1.0.vpx
-TableFileName6 = /home/james/Games/VisualPinball/tables/Godzilla (Sega 1998) VPW 1.3.vpx
-TableFileName7 = /home/james/Games/VisualPinball/tables/Warlok (Williams 1982) VPW 1.2.vpx
+TableFileName0 = /home/james/Games/VisualPinball/tables/Centaur (Bally 1981) v2.0.3.vpx
+TableFileName1 = /home/james/Games/VisualPinball/tables/Medieval Madness (Williams 1997) VPW v1.0.vpx
+TableFileName2 = /home/james/Games/VisualPinball/tables/Warlok (Williams 1982) VPW 1.2.vpx
+TableFileName3 = /home/james/Games/VisualPinball/tables/Eight Ball (Bally 1977) v2.0.0.vpx
+TableFileName4 = /home/james/Games/VisualPinball/tables/Time Fantasy (Williams 1983) VPW v1.0.vpx
+TableFileName5 = /home/james/Games/VisualPinball/tables/Flash Gordon (Bally 1981) VPW Mod v3.0.vpx
+TableFileName6 = /home/james/Games/VisualPinball/tables/Cactus Canyon (Bally 1998) VPW 1.1.vpx
+TableFileName7 = /home/james/Games/VisualPinball/tables/The Machine-Bride Of Pinbot (Williams 1991)_VPW_1.0.4.vpx
 
 
 ; #######################################################
@@ -1098,5 +1103,182 @@ Skateball = 1.0
 Bad Cats (Williams 1989) = 3.1
 Operation Thunder (Gottlieb 1992) = VPX version 1.0
 Melody = 1.0
-Eight Ball (Bally 1977) = 5.5.0
+Eight Ball (Bally 1977) = 2.0
 TNA = 2.3
+Doctor Who = VPW Mod v1.0
+Centaur (Bally 1981) = 2.0
+Indiana Jones - The Pinball Adventure = 1.0
+Monster Bash VPW Mod = 1.0
+Cirqus Voltaire = VPW Mod v1.1
+Defender = 1.4
+Jurassic Park (Data East 1993) = 1.0
+STARSHIP TROOPERS (SEGA 1997) = 1.1
+Star Trek - The Next Generation = 1.4
+Star Wars (Data East) = v1.2
+Tales of the Arabian Nights = 1.0
+The Addams Family = 2.3.1
+SpongeBob's Bikini Bottom Pinball = 2.1
+Lord Of The Rings - Valinor Edition = 1.6
+Judge Dredd = V1.0
+Cactus Canyon = 2.0
+Shrek (Stern 2008) = 1.0
+Alien Star (Gottlieb 1984) = 3.0
+Quicksilver (Stern 1980) = 1.0
+Creature From The Black Lagoon = 1.2
+Attack from Mars LE (Bally 1995) = 5.5.1
+The Goonies : Never Say Die = 1.4
+Back to the Future: The Pinball (Data East 1990) = 1.05
+RollerCoaster Tycoon (Stern 2002) = 2.2
+Star Wars Redux = 2
+The Machine - Bride of Pinbot (Williams 1991) = 2.0
+Fish Tales (Williams 1992) = 1.1
+Lethal Weapon 3 (Data East 1992) = 2.0
+Iron Man Vault Edition = 0.1
+Radical Prototype = 1.0
+Simpsons Pinball Party, The (Stern 2003) = 1.0.0
+X-Men LE (Stern 2012) = Mod v1.0
+Red and Ted's Road Show (VPW Mod) (Williams 1994) = 1.4
+Transporter: The Rescue (Midway 1989) = 1.0
+Black Rose = v1.0
+Diner =
+No Fear: Dangerous Sports = 1.0
+Congo (Williams 1995) = VPW Mod v1.0
+Taxi (Williams 1988) = 1
+Police Force = 1.1
+Austin Powers (Stern 2001) = 1.01
+Die Hard Trilogy = 0.98
+Visual Pinball Demo Table = 1.1
+Game of Thrones = 1.2
+Hang Glider (Bally 1976) = 1.0
+Breakshot (Capcom 1996) = 1.1
+Hook = 1.0
+Big Bang Bar (Capcom 1996) = 2.1
+Jokerz! (Williams 1988) = 1.3
+Beat The Clock (Bally 1985) = 1.0
+Special Force (Bally 1986) = 1.2
+Spider-Man Classic Vault Edition = 2.1
+Batman (Data East 1991) = 1.0
+Goldeneye (Sega 1996) = 1.2
+Tales from the Crypt (Data East 1993) = 1.07
+NBA Fastbreak = 1.1
+Harlem Globetrotters on Tour (Bally 1979) = 1.0
+Haunted House = 2.1
+Black Pyramid (Bally 1984) = 2.0
+Catacomb (Stern 1981) = 2.0
+Kings of Steel (Bally 1984) = 2.0
+New Wave (Bell Games 1985) = 2.0
+Sorcerer = 4.0
+Supersonic (Bally 1979) = 2.0
+Tri Zone (Williams 1979) = 2.0
+Voltan Escapes Cosmic Doom (Bally 1979) = 2.0
+Mario Andretti = 2.0
+Skylab (Williams 1974) = 2.0
+Spectrum (Bally 1981) = 1.0
+Scared Stiff = 1.0
+Twilight Zone (Bally 1993) = VPW Edition
+Class Of 1812 = 3.0
+Apollo 13 (Sega 1995) = 2.1
+Safe Cracker (Bally 1996) = 2.0.0
+Super Orbit (Gottlieb 1983) = 2.0
+Star Race (Gottlieb 1980) = 2.0
+The Games (Gottlieb 1984) = 2.0
+Count Down = 1.0
+Frontier (Bally 1980) = 2.0
+Mata Hari (Bally 1978) = 2.0
+World Cup Soccer (Bally 1994) = 1.0
+Stargate (Gottlieb 1995) = 2.0
+Medieval Madness (Williams 1997) = 1.0
+Flash Gordon (Bally 1981) = 3.0
+Time Fantasy (Williams 1983) = 1.0
+
+[DMD]
+Profile.1.Legacy = 1
+Profile.1.ScaleFX = 0
+Profile.1.DotTint = 2970367
+Profile.1.UnlitDotColor = 4210752
+Profile.1.DotBrightness = 25.000000
+Profile.1.DotSize = 0.750000
+Profile.1.DotSharpness = 0.900000
+Profile.1.DiffuseGlow = 0.100000
+Profile.2.Legacy = 0
+Profile.2.ScaleFX = 0
+Profile.2.DotTint = 2970367
+Profile.2.UnlitDotColor = 4210752
+Profile.2.DotBrightness = 25.000000
+Profile.2.DotSize = 0.600000
+Profile.2.DotSharpness = 0.900000
+Profile.2.DiffuseGlow = 0.100000
+Profile.3.Legacy = 0
+Profile.3.ScaleFX = 0
+Profile.3.DotTint = 1385471
+Profile.3.UnlitDotColor = 4210752
+Profile.3.DotBrightness = 25.000000
+Profile.3.DotSize = 0.750000
+Profile.3.DotSharpness = 0.900000
+Profile.3.DiffuseGlow = 0.100000
+Profile.4.Legacy = 0
+Profile.4.ScaleFX = 0
+Profile.4.DotTint = 2359061
+Profile.4.UnlitDotColor = 4210752
+Profile.4.DotBrightness = 25.000000
+Profile.4.DotSize = 0.750000
+Profile.4.DotSharpness = 0.900000
+Profile.4.DiffuseGlow = 0.100000
+Profile.5.Legacy = 0
+Profile.5.ScaleFX = 0
+Profile.5.DotTint = 2359295
+Profile.5.UnlitDotColor = 4210752
+Profile.5.DotBrightness = 25.000000
+Profile.5.DotSize = 0.750000
+Profile.5.DotSharpness = 0.900000
+Profile.5.DiffuseGlow = 0.100000
+Profile.6.Legacy = 0
+Profile.6.ScaleFX = 0
+Profile.6.DotTint = 16777215
+Profile.6.UnlitDotColor = 4210752
+Profile.6.DotBrightness = 25.000000
+Profile.6.DotSize = 0.600000
+Profile.6.DotSharpness = 0.900000
+Profile.6.DiffuseGlow = 0.100000
+Profile.7.Legacy = 0
+Profile.7.ScaleFX = 0
+Profile.7.DotTint = 16777215
+Profile.7.UnlitDotColor = 4210752
+Profile.7.DotBrightness = 25.000000
+Profile.7.DotSize = 0.750000
+Profile.7.DotSharpness = 0.900000
+Profile.7.DiffuseGlow = 0.100000
+
+[Alpha]
+Profile.1.Color = 2004735
+Profile.1.Unlit = 4210752
+Profile.1.Brightness = 5.000000
+Profile.1.DiffuseGlow = 1.000000
+Profile.2.Color = 16772927
+Profile.2.Unlit = 4210752
+Profile.2.Brightness = 5.000000
+Profile.2.DiffuseGlow = 1.000000
+Profile.3.Color = 15531848
+Profile.3.Unlit = 4210752
+Profile.3.Brightness = 5.000000
+Profile.3.DiffuseGlow = 1.000000
+Profile.4.Color = 1385471
+Profile.4.Unlit = 4210752
+Profile.4.Brightness = 5.000000
+Profile.4.DiffuseGlow = 1.000000
+Profile.5.Color = 2359061
+Profile.5.Unlit = 4210752
+Profile.5.Brightness = 5.000000
+Profile.5.DiffuseGlow = 1.000000
+Profile.6.Color = 2359295
+Profile.6.Unlit = 4210752
+Profile.6.Brightness = 5.000000
+Profile.6.DiffuseGlow = 1.000000
+Profile.7.Color = 16777215
+Profile.7.Unlit = 4210752
+Profile.7.Brightness = 5.000000
+Profile.7.DiffuseGlow = 1.000000
+Profile.8.Color = 16777215
+Profile.8.Unlit = 4210752
+Profile.8.Brightness = 5.000000
+Profile.8.DiffuseGlow = 1.000000
