--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -234,12 +234,13 @@ bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
-### Resize the floating Firefox Picture-in-Picture window, keeping its position
-$floatingWindowResizePixels = 80
-bind = $mainMod SHIFT, N, exec, hyprctl dispatch resizewindowpixel -$floatingWindowResizePixels -$floatingWindowResizePixels, title:Picture-in-Picture
-bind = $mainMod SHIFT, N, exec, hyprctl dispatch movewindowpixel $floatingWindowResizePixels $floatingWindowResizePixels, title:Picture-in-Picture
-bind = $mainMod SHIFT, M, exec, hyprctl dispatch resizewindowpixel $floatingWindowResizePixels $floatingWindowResizePixels, title:Picture-in-Picture
-bind = $mainMod SHIFT, M, exec, hyprctl dispatch movewindowpixel -$floatingWindowResizePixels -$floatingWindowResizePixels, title:Picture-in-Picture
+### Resize the floating Firefox Picture-in-Picture window, keeping its position. Assume 16:9.
+$floatingWindowResizePixelsX = 80
+$floatingWindowResizePixelsY = 45
+bind = $mainMod SHIFT, N, exec, hyprctl dispatch resizewindowpixel -$floatingWindowResizePixelsX -$floatingWindowResizePixelsY, title:Picture-in-Picture
+bind = $mainMod SHIFT, N, exec, hyprctl dispatch movewindowpixel $floatingWindowResizePixelsX $floatingWindowResizePixelsY, title:Picture-in-Picture
+bind = $mainMod SHIFT, M, exec, hyprctl dispatch resizewindowpixel $floatingWindowResizePixelsX $floatingWindowResizePixelsY, title:Picture-in-Picture
+bind = $mainMod SHIFT, M, exec, hyprctl dispatch movewindowpixel -$floatingWindowResizePixelsX -$floatingWindowResizePixelsY, title:Picture-in-Picture
 
 ### Multimedia keys
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
