Hyprland windowrules 0.53 compatiblility upgrade

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -263,37 +263,107 @@ bindl = $mainMod, R, exec, playerctl play-pause
 #bindl = , XF86Search , exec, playerctl play-pause
 
 ## Windows and workspaces
-windowrule = suppressevent maximize, class:.* # Ignore maximize requests from apps
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 # Fix some dragging issues with XWayland
+
+### Ignore maximize requests from apps. You'll probably like this.
+windowrule {
+  name = windowrule-1
+  suppress_event = maximize
+  match:class = .*
+}
+
+### Fix some dragging issues with XWayland
+windowrule {
+  name = windowrule-2
+  no_focus = on
+  match:class = ^$
+  match:title = ^$
+  match:xwayland = 1
+  match:float = 1
+  match:fullscreen = 0
+  match:pin = 0
+}
+
 xwayland {
   force_zero_scaling = true
 }
-windowrule = idleinhibit fullscreen, class:.* # Prevent hypridle lock on any fullscreen window
-windowrule = noborder, onworkspace:w[t1] # Do not show an active border highlight when only one window in workspace
+
+### Prevent hypridle lock on any fullscreen window
+windowrule {
+  name = windowrule-3
+  idle_inhibit = fullscreen
+  match:class = .*
+}
+
+### Do not show an active border highlight when only one window in workspace
+windowrule {
+  name = windowrule-4
+  border_size = 0
+  match:workspace = w[t1]
+}
 
 ### Firefox: floating PIP (https://github.com/hyprwm/Hyprland/issues/2942)
-windowrule = size 512 288, title:(Picture-in-Picture)
-windowrule = pin, title:^(Picture-in-Picture)$
-windowrule = move 100%-w-20 100%-w-20, title:(Picture-in-Picture)
-windowrule = float, title:^(Picture-in-Picture)$
-windowrule = opacity 1 override 1 override, title:^(Picture-in-Picture)$
+windowrule {
+  name = windowrule-5
+  size = 512 288
+  move = ((monitor_w*1)-window_w-20) ((monitor_h*1)-window_h-20)
+  match:title = (Picture-in-Picture)
+}
+
+windowrule {
+  name = windowrule-6
+  pin = on
+  float = on
+  opacity = 1 override 1 override
+  match:title = ^(Picture-in-Picture)$
+}
 
 ### Steam: fullscreen launched games
-windowrule = tile,class:^steam_app_[0-9]+$
-windowrule = fullscreen,class:^steam_app_[0-9]+$
+windowrule {
+  name = windowrule-7
+  tile = on
+  fullscreen = on
+  idle_inhibit = fullscreen
+  match:class = ^steam_app_[0-9]+$
+}
 
 ### Steam: Prevent hypridle lock on Steam games
-windowrule = idleinhibit fullscreen, class:^steam_app_[0-9]+$
+windowrule {
+  name = windowrule-8a
+  idle_inhibit = fullscreen
+  match:class = ^steam_app_[0-9]+$
+}
 
 ### VisualPinball: playfield on external, DMD on primary
-windowrule = monitor $externalMonitor,title:Visual Pinball Player
-windowrule = monitor $primaryMonitor,title:PinMAME
-windowrule = monitor $primaryMonitor,title:FlexDMD
-windowrule = dimaround,title:PinMAME
+windowrule {
+  name = windowrule-8
+  monitor = $externalMonitor
+  match:title = Visual Pinball Player
+}
+
+windowrule {
+  name = windowrule-9
+  monitor = $primaryMonitor
+  dim_around = on
+  match:title = PinMAME
+}
+
+windowrule {
+  name = windowrule-10
+  monitor = $primaryMonitor
+  match:title = FlexDMD
+}
 
 ### Pinball FX3: game on external
-windowrule = monitor $externalMonitor, title:Pinball FX3
-windowrule = fullscreen, title:Pinball FX3
+windowrule {
+  name = windowrule-11
+  monitor = $externalMonitor
+  fullscreen = on
+  match:title = Pinball FX3
+}
 
 ### Ymir
-windowrule = tile,class:^ymir-[0-9a-z.-]+$
+windowrule {
+  name = windowrule-12
+  tile = on
+  match:class = ^ymir-[0-9a-z.-]+$
+}
